# linear_regression_model

./: Multivariate.ipynb
summative/API/: feature_names.pkl  main.py  prediction.py  pyproject.toml  requirements.txt  train.py
summative/linear_regression/: Multivariate.ipynb  best_model.pkl  scaler.pkl
